kubernetes/apps/observability/loki/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki
  annotations:
    hajimari.io/enable: "false"
  labels:
    app.kubernetes.io/instance: loki
    app.kubernetes.io/name: loki
spec:
  ingressClassName: internal
  rules:
  - host: loki.${SECRET_DOMAIN}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: loki-headless
            port:
              number: 3100
